# identity-server

./: .dockerignore  .gitignore  LICENSE  README.md  _tests_start.py  _tests_start.sh  dev.env  docker-compose.yaml  integration_tests.py  manage.py  pyproject.toml  server.Dockerfile  test.sh  test_integration.py  tests.sh
client/: __init__.py  _users.py
server/: __init__.py  _app.py
tests/: conftest.py  test_users.py
